[package]
name = "rusty-lsl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "An independently authored Rust implementation of Lab Streaming Layer compatibility"
publish = false

[lints]
workspace = true
